name:                lngen
version:             0.0.1
synopsis:            Tool for generating Locally Nameless definitions and proofs in Coq, working together with Ott.
description:         Check out <https://github.com/plclub/lngen#readme the readme> for documentation.
homepage:            https://github.com/plclub/lngen
license:             MIT
license-file:        LICENSE
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AST
                     , ASTAnalysis
                     , ASTCheck
                     , ComputationMonad
                     , CoqLNOutput
                     , CoqLNOutputCombinators
                     , CoqLNOutputCommon
                     , CoqLNOutputDefinitions
                     , CoqLNOutputThmDegree
                     , CoqLNOutputThmFv
                     , CoqLNOutputThmLc
                     , CoqLNOutputThmOpenClose
                     , CoqLNOutputThmOpenClose2
                     , CoqLNOutputThmSize
                     , CoqLNOutputThmSubst
                     , CoqLNOutputThmSwap
                     , MyLibrary
                     , Parser
  build-depends:       base
                     , syb
                     , parsec
                     , containers
                     , mtl
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-record-updates

executable lngen
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-incomplete-record-updates
  build-depends:       base
                     , lngen
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/plclub/lngen 
