name:                lngen
version:             0.3.2
synopsis:            Tool for generating Locally Nameless definitions and proofs in Coq, working together with Ott.
description:         Check out <https://github.com/plclub/lngen#readme the readme> for documentation.
homepage:            https://github.com/plclub/lngen
license:             MIT
license-file:        LICENSE
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AST
                     , ASTAnalysis
                     , ASTCheck
                     , ComputationMonad
                     , CoqLNOutput
                     , CoqLNOutputCombinators
                     , CoqLNOutputCommon
                     , CoqLNOutputDefinitions
                     , CoqLNOutputThmDegree
                     , CoqLNOutputThmFv
                     , CoqLNOutputThmLc
                     , CoqLNOutputThmOpenClose
                     , CoqLNOutputThmOpenClose2
                     , CoqLNOutputThmSize
                     , CoqLNOutputThmSubst
                     , CoqLNOutputThmSwap
                     , MyLibrary
                     , Parser
  build-depends:       base >= 4.9.0
                     , syb
                     , parsec
                     , containers
                     , mtl >= 2.2.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-record-updates -Werror

executable lngen
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-incomplete-record-updates
  build-depends:       base >= 4.9.0
                     , lngen
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/plclub/lngen 
